--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -134,7 +134,7 @@
           "logo": "shopify://shop_images/GOSOAKY-logo-image-2024.jpg",
           "logo_width": 110,
           "logo_position": "middle-left",
-          "menu": "main-menu-fw24",
+          "menu": "main-menu-aw25",
           "show_line_separator": true,
           "enable_sticky_header": true,
           "margin_bottom": 0
